# parallel_computing

./: .gitignore  README.md
task_cuda/: Makefile  run.sh
task_cuda/include/: grid_mpi.hpp  solver_cuda.hpp  timing.hpp
task_cuda/src/: analytic.cpp  grid_mpi.cpp  main_cuda.cpp  solver_cuda.cu
task_hybrid/: CMakeLists.txt  run.sh
task_hybrid/include/: grid_mpi.hpp  solver_hybrid.hpp
task_hybrid/src/: config.cpp  main_hybrid.cpp  solver_hybrid.cpp
task_mpi/: CMakeLists.txt  run.sh
task_mpi/include/: analytic.hpp  config.hpp  grid_mpi.hpp  solver_mpi.hpp
task_mpi/src/: config.cpp  grid_mpi.cpp  main_mpi.cpp  solver_mpi.cpp
task_mpi/tmp/: job_np_1.lsf  job_np_16.lsf  job_np_2.lsf  job_np_32.lsf  job_np_4.lsf  job_np_8.lsf
task_omp/: CMakeLists.txt  run.sh
task_omp/include/: analytic.hpp  config.hpp  grid.hpp  solver.hpp
task_omp/src/: analytic.cpp  config.cpp  grid.cpp  main.cpp  solver.cpp
